--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,6 +15,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="card"></div>
+    </div>
   </body>
 </html>
