--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="card"></div>
+      <div class="card">
+        <img src="./images/image-qr-code.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
