--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -18,6 +18,13 @@
     <div class="container">
       <div class="card">
         <img src="./images/image-qr-code.png" alt="" />
+        <div class="text">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>
+            Scan teh QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
     </div>
   </body>
