--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -13,6 +13,7 @@
     />
 
     <title>Frontend Mentor | QR code component</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
