--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <script src="./js/main.js" defer></script>
-    <title>Document</title>
+    <!-- displays site properly based on user's device -->
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+
+    <title>Frontend Mentor | QR code component</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    Hello, world!
+    <div class="container">
+      <div class="card">
+        <img src="./images/image-qr-code.png" alt="" />
+        <div class="text">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>
+            Scan teh QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
